--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
 }
 h2 {
   font-size: 26px;
-  font-weight: 400;
   margin: 0 10px 10px 10px;
   text-align: center;
+  font-weight: bold;
 }
 h3 {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 1.5em;
 }
 p {
   line-height: 1.5em;
@@ -68,6 +68,8 @@ header nav ul li a:hover {
   color: #bdbdbd;
   text-decoration: none;
 }
+
+
 /* -------  Search Form ------- */
 form {
   border: 2px solid #FF385C;
